[package]
name = "controls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
dotenv = "*"
ctrlc = "3.2.3"
[dependencies.winapi]
version = "0.3.9"
features = ["endpointvolume", "mmdeviceapi", "objbase", "guiddef"]
