[package]
name = "controls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.enigo]
path = "enigo"
features = ["with_serde"]
[dependencies]
dotenv = "*"
ctrlc = "3.2.3"
serde_json = "1.0.85"
[dependencies.serde]
version = "1.0.144"
features = ["derive"]
[dependencies.winapi]
version = "0.3.9"
features = ["endpointvolume", "mmdeviceapi", "objbase", "guiddef"]
